<resources>
    <string name="app_name">Bed</string>
    <string name="title_activity_system_overview">SystemOverview</string>
    <string name="tab_text_1">Bed</string>
    <string name="tab_text_2">Patient</string>

    <string name="patient_name">Name: %1$s %2$s</string>
    <string name="patient_age">Age: %1$d</string>
    <string name="patient_height">Height: %1$d</string>\
    <string name="patient_weight">Weight: %1$d</string>

    <string name="head">Head</string>
    <string name="shoulder">Shoulders</string>
    <string name="back">Back</string>
    <string name="butt">Butt</string>
    <string name="calves">Calves</string>
    <string name="feet">Feet</string>

    <string name="head_pressure">Head: %1$.1f psi</string>
    <string name="shoulder_pressure">Shoulders: %1$.1f psi</string>
    <string name="back_pressure">Back: %1$.1f psi</string>
    <string name="butt_pressure">Butt: %1$.1f psi</string>
    <string name="calve_pressure">Calves: %1$.1f psi</string>
    <string name="foot_pressure">Feet: %1$.1f psi</string>

    <string name="text_label_patient">Patient</string>
    <string name="text_label_bed">Bed</string>
    <string name="text_label_settings">Settings</string>

    <string name="card_view_label_patient_pressure">Patient Pressure</string>
    <string name="show_more">Show More</string>

    <string name="text_label_patient_info">Patient Info</string>
    <string name="text_label_health_score">Health Score</string>
    <string name="text_label_ulcer_formation">Ulcer Formation</string>

    <string name="text_label_massage">Massage</string>
    <string name="text_label_bed_status">Bed Status</string>
    <string name="text_label_bed_response">Bed Response</string>
    <string name="body_3d">Body 3D</string>


    <string name="bed_data">Bed Data</string>

</resources>