<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.overview.bed.BedFragment">

        <TextView
            android:id="@+id/textViewBedStatus"
            style="@style/titleLarge"
            android:text="@string/text_label_bed_status"
            app:layout_constraintBottom_toTopOf="@+id/cardViewBedStatus"
            app:layout_constraintStart_toStartOf="@+id/cardViewBedStatus" />

        <TextView
            android:id="@+id/textViewBedStatusShowMore"
            style="@style/textViewShowMore"
            android:text="@string/show_more"
            app:layout_constraintBottom_toTopOf="@+id/cardViewBedStatus"
            app:layout_constraintEnd_toEndOf="@+id/cardViewBedStatus" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBedStatus"
            style="@style/cardViewLarge"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/drawableBedFragment"
                    android:name="com.jacksonmed.bed.activities.overview.bed.inflatable.DrawableFragment"
                    android:layout_width="500dp"
                    android:layout_height="500dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonBedStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="24dp"
                    android:text="Get Bed Status"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewBedData"
            style="@style/titleLarge"
            android:text="@string/text_label_bed_status"
            app:layout_constraintBottom_toTopOf="@+id/cardViewBedData"
            app:layout_constraintStart_toStartOf="@+id/cardViewBedData" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBedData"
            style="@style/cardViewLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewMassage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewBedData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/body_3d" />

                <Switch
                    android:id="@+id/switch_bedData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Switch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewBedMassage"
            style="@style/titleSmall"
            android:text="@string/text_label_massage"
            app:layout_constraintBottom_toTopOf="@+id/cardViewMassage"
            app:layout_constraintStart_toStartOf="@+id/cardViewMassage" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMassage"
            style="@style/cardViewSmall"
            app:layout_constraintStart_toStartOf="@+id/cardViewBedStatus"
            app:layout_constraintTop_toBottomOf="@+id/cardViewBedStatus">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <Switch
                    android:id="@+id/switchMassage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Massage" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewBedResponse"
            style="@style/titleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_bed_response"
            app:layout_constraintBottom_toTopOf="@+id/cardViewBedResponse"
            app:layout_constraintStart_toStartOf="@+id/cardViewBedResponse" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBedResponse"
            style="@style/cardViewSmall"
            app:layout_constraintEnd_toEndOf="@+id/cardViewBedStatus"
            app:layout_constraintTop_toBottomOf="@+id/cardViewBedStatus" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>